<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SensorActivity">

    <!-- Header Image -->
    <ImageView
        android:id="@+id/headerImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="-100dp"
        android:src="@drawable/header"
        android:scaleType="fitCenter"/>

    <!-- Footer Text -->
    <TextView
        android:id="@+id/headerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sensor_app_name"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="-30dp"
        android:layout_below="@+id/headerImage"
        android:gravity="center"
        android:background="@color/white" />

    <LinearLayout
        android:id="@+id/linearlayoutbuttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:orientation="horizontal"
        android:layout_below="@id/headerTextView">
        <Button
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_button_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"/>
        <Space
            android:layout_width="100dp"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/uploadButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/upload_button_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/accelerometerValuesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accelerometer_values_text"
        android:textSize="18sp"
        android:layout_below="@id/linearlayoutbuttons"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <!-- ListView -->
    <ListView
        android:id="@+id/listViewDatabaseRealTime"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:layout_below="@id/accelerometerValuesTextView"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/returnButtonSensor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/return_button_text"
        android:layout_below="@+id/listViewDatabaseRealTime"
        android:layout_centerHorizontal="true" />

    <!-- Footer Text -->
    <TextView
        android:id="@+id/footerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_footer"
        android:textSize="22sp"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:background="@color/black" />

</RelativeLayout>
