<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MessageActivity">

    <!-- ImageView para el encabezado -->
    <ImageView
        android:id="@+id/headerImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/header"
        android:scaleType="fitCenter"
        android:layout_marginTop="-125dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:textStyle="bold"
        android:textSize="28dp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/messages_title"
        />
    <!-- CardView para el contenido principal -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewMainContent"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/headerImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/footerImageView"
        android:layout_marginTop="-450dp">

        <!-- Contenido principal aquí -->

        <EditText
            android:id="@+id/messageEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_message_hint"
            android:inputType="text"
            android:maxLines="1"
            android:padding="8dp" />

        <Button
            android:id="@+id/sendButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/send_button_text"
            app:layout_constraintTop_toBottomOf="@id/messageEditText"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="48dp" />

    </androidx.cardview.widget.CardView>

    <!-- CardView para el ListView -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewListView"
        android:layout_width="0dp"
        android:layout_height="400dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/cardViewMainContent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/footerImageView"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <ListView
            android:id="@+id/messageListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@null"
            android:dividerHeight="0dp" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/returnButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/return_button_text"
        app:layout_constraintTop_toBottomOf="@id/cardViewListView"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="22dp" />

    <!-- ImageView para el pie de página -->
    <ImageView
        android:id="@+id/footerImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/header"
        android:scaleType="fitCenter"
        android:layout_marginBottom="-125dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
